--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 <div class="container">
     <div id="users"></div>
     <div id="favoriteImg"></div>
-    <div id="imgModal">
+    <div id="imgModal" class="img__modal">
         <span id="imgModal__close" class="img__modal__close">ₓ</span>
         <img src="">
     </div>
-    <div id="myOverlay"></div>
+    <div id="myOverlay" class="my__overlay"></div>
 </div>
 
 </body>
